--- a/webui/static/style.css
+++ b/webui/static/style.css
@@ -292,7 +292,7 @@ input[type=number]{-moz-appearance:textfield;appearance:textfield;}
   display: flex;
   flex-direction: column;
   align-items: center;
-  transform: translateY(-142%);
+  /* transform: translateY(-142%); */
 }
 
 
