add login screen.... and favicon

--- a/webui/templates/index.html
+++ b/webui/templates/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Wi-Fi Roam Cycle</title>
-
+  <title>Autoroam UI</title>
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <!-- External stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
@@ -180,6 +180,6 @@
   </div>
 
   <!-- External JS -->
-  <script src="app.js"></script>
+  <script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
