--- a/webui/templates/index.html
+++ b/webui/templates/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+  <div id="topbar">
+    <div class="topbar-inner">
+      <div class="brand">
+        <img src="{{ url_for('static', filename='favicon.ico') }}" alt="logo" class="logo">
+        <span class="title">Autoroam</span>
+      </div>
+      <button id="btnLogout" class="btnLogout">Logout</button>
+    </div>
+  </div>
+
   <div class="container">
     <main id="app">
       <!-- ===== Header controls ===== -->
