--- a/webui/templates/index.html
+++ b/webui/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Autoroam UI</title>
+  <title>wlan-autoroam UI</title>
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <!-- External stylesheet -->
  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -14,7 +14,7 @@
     <div class="topbar-inner">
       <div class="brand">
         <img src="{{ url_for('static', filename='favicon.ico') }}" alt="logo" class="logo">
-        <span class="title">Autoroam</span>
+        <span class="title">wlan-autoroam</span>
       </div>
 
       <div class="actions">
